--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,19 +1,36 @@
+* {
+    margin: 0;
+    box-sizing: border-box;
+}
+
 body {
     background-color: pink;
     display: flex;
     flex-direction: column;
 }
 
-nav {
-    height: 70px;
+#results-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    /* grid-template-rows: 1fr 1fr 1fr; */
+    /* width: 600px; */
+    /* height: 600px; */
 }
 
-nav ul {
+li {
+    text-decoration: none;
+    list-style: none;
+}
+
+.img-card {
+    width: 300px;
+    height: 300px;
+    border: 2px solid grey;
     display: flex;
-    flex-direction: row;
-    /* align-items: flex-end; */
+    flex-direction: column;
+    justify-content: space-between;
 }
 
-nav li {
-    width: 100px;
+img {
+    width: 100%;
 }
