--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,17 +4,22 @@
 }
 
 body {
-    background-color: pink;
+    background-color: #ffd166;
     display: flex;
     flex-direction: column;
 }
 
-#results-container {
+#page-title {
+    margin: 20px;
+    font-size: 2rem;
+    font-weight: bold;
+}
+
+.wrapper-grid {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    /* grid-template-rows: 1fr 1fr 1fr; */
-    /* width: 600px; */
-    /* height: 600px; */
+    grid-template-columns: repeat(auto-fit, 300px);
+    overflow: hidden;
+    column-gap: 20px;
 }
 
 li {
@@ -23,14 +28,44 @@ li {
 }
 
 .img-card {
-    width: 300px;
+    /* width: 300px; */
     height: 300px;
-    border: 2px solid grey;
+    border: 2px solid #f7ede2;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    padding: 5px;
+    margin-top: 20px;
 }
 
 img {
-    width: 100%;
+    object-fit: cover;
+    max-width: 100%;
+    height: 100%;
 }
+
+.img-title {
+    margin-top: 10px;
+    font-weight: bold;
+
+}
+
+/************************** MEDIA QUERIES *************************/
+
+/* @media screen and (max-width: 992px){
+    .wrapper-grid {
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+}
+
+@media screen and (max-width: 400px) {
+    .wrapper-grid {
+        grid-template-columns: 1fr 1fr;
+    }
+}
+
+@media screen and (max-width: 375px) {
+    .wrapper-grid {
+        grid-template-columns: 1fr;
+    }
+} */
