--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,6 +7,12 @@ body {
     background-color: #ffd166;
     display: flex;
     flex-direction: column;
+    background: linear-gradient(#ffd166, transparent),
+        linear-gradient(to top left, #66ffab, transparent),
+        linear-gradient(to top right, #ff6666, transparent);
+    background-blend-mode: screen;
+    /* width: 100vw;
+    height: 100vh; */
 }
 
 #page-title {
@@ -47,7 +53,12 @@ img {
 .img-title {
     margin-top: 10px;
     font-weight: bold;
+}
 
+footer {
+    margin-top: 10px;
+    align-items:center
+    height: 30px;
 }
 
 /************************** MEDIA QUERIES *************************/
