--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,28 +1,22 @@
 * {
     margin: 0;
+    padding: 0;
     box-sizing: border-box;
 }
 
 :root {
-    --bg-color: rgb(189, 189, 189)
+    --bg-color: rgb(189, 189, 189);
+    --gradient: linear-gradient(#ffd166c7, transparent),
+        linear-gradient(to top left, #66ffabc9, transparent),
+        linear-gradient(to top right, #ff6666bf, transparent);
     /* --main-color: rgb(189, 189, 189); */
 }
 
 
 body {
-    /* background-color: #ffd166; */
     display: flex;
     flex-direction: column;
-    /* align-items: center; */
-    /* background: linear-gradient(#ffd166, transparent),
-        linear-gradient(to top left, #66ffab, transparent),
-        linear-gradient(to top right, #ff6666, transparent);
-    background-blend-mode: screen; */
-    /* width: 100vw;
-    height: 100vh; */
     background-color: var(--bg-color);
-    /* font-family: 'Fira Sans', sans-serif; */
-    /* font-family: 'Rock 3D', cursive; */
     font-family: 'Source Code Pro', monospace;
 }
 
@@ -36,7 +30,7 @@ form {
     display: flex;
     flex-direction: column;
     width: 500px;
-    background-color: grey;
+    background: var(--gradient);
     align-self: center;
 }
 
@@ -62,12 +56,12 @@ input {
 
 .img-card {
     width: 400px;
-    border: 2px solid #f7ede2;
+    border: 5px solid #000000;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    padding: 5px;
+    padding-bottom: 10px;
     margin-top: 20px;
     cursor: pointer;
     
@@ -110,4 +104,68 @@ footer {
     40%{background-position:0% 100%, 50%   0%,100%  50%}
     60%{background-position:0%  50%, 50% 100%,100%   0%}
     80%{background-position:0%  50%, 50%  50%,100% 100%}
+}
+
+
+/*************************** MODAL ****************************/
+
+.modal-container {
+    position: fixed;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    width: 100vw;
+    background-color: #000000db;
+    z-index: 1001;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.modal-box {
+    border-radius: 3px;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    background: var(--gradient);
+    background-blend-mode: screen;
+    width: 60vw;
+    height: 80vh;
+    padding: 40px;
+}
+
+.img-container {
+    height: 400px;
+    width: 100%;
+    text-align: center;
+}
+
+.inner-img-modal {
+    object-fit: cover;
+    max-width: 100%;
+    max-height: 100%;
+}
+
+.text-container {
+    width: 90%;
+    align-self: center;
+    /* border: 3px solid red; */
+}
+
+.text-container h3 {
+    margin-bottom: 10px;
+}
+
+#modal-btn {
+    align-self: center;
+    width: 100px;
+    height: 30px;
+    font-family: 'Source Code Pro', monospace;
+    background-color: var(--bg-color);
+    border: none;
+    border-radius: 3px;
+}
+
+#modal-btn:hover {
+    background-color: rgb(145, 145, 145);
 }
